--- a/mobiles/package.json
+++ b/mobiles/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.3.1",
     "styled-components": "^5.1.1",
     "uuidv4": "^6.1.0"
   },
