--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-random": "~8.1.0",
