--- a/app.json
+++ b/app.json
@@ -23,6 +23,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.hackathonccr.chapa",
+      "versionCode": 1
     }
   }
 }
